UX: Solved filter alignment adjustment (#67)

--- a/assets/stylesheets/common/docs.scss
+++ b/assets/stylesheets/common/docs.scss
@@ -255,3 +255,13 @@
     }
   }
 }
+
+.docs-solved {
+  padding: 0;
+  input {
+    width: auto;
+  }
+  .docs-item {
+    width: 100%;
+  }
+}
