--- a/assets/stylesheets/mobile/docs.scss
+++ b/assets/stylesheets/mobile/docs.scss
@@ -59,4 +59,10 @@
     margin: 1em 0 0 0;
     width: 100%;
   }
+
+  .docs-solved {
+    .docs-item {
+      padding: 0.25em 0;
+    }
+  }
 }
